# kas

./: .rustfmt.toml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.lock.msrv  Cargo.toml  README.md  ROADMAP.md  check.sh  clippy.toml  run-wasm-example.sh
crates/kas-core/: Cargo.toml  README.md  build.rs
crates/kas-core/src/: accesskit.rs  action.rs  class.rs  component.rs  config.rs  decorations.rs  dir.rs  erased.rs  future.rs  geom.rs  hidden.rs  label.rs  lib.rs  message.rs  messages.rs  popup.rs  prelude.rs  root.rs  text.rs  title_bar.rs  toolkit.rs  updatable.rs  util.rs
crates/kas-core/src/app/: app.rs  common.rs  event_loop.rs  mod.rs  shared.rs  window.rs
crates/kas-core/src/config/: config.rs  event.rs  factory.rs  font.rs  format.rs  mod.rs  options.rs  shortcuts.rs  theme.rs
crates/kas-core/src/core/: accesskit.rs  collection.rs  data.rs  events.rs  impls.rs  into_widget.rs  layout.rs  mod.rs  node.rs  role.rs  scroll_traits.rs  tile.rs  widget.rs  widget_id.rs  window.rs
crates/kas-core/src/draw/: color.rs  draw.rs  draw_rounded.rs  draw_shared.rs  handle.rs  images.rs  mod.rs  theme.rs
crates/kas-core/src/event/: components.rs  config.rs  config_cx.rs  enums.rs  event.rs  events.rs  handler.rs  manager.rs  mod.rs  response.rs  shortcuts.rs  update.rs
crates/kas-core/src/geom/: transform.rs  vector.rs
crates/kas-core/src/hidden/: with_any.rs
crates/kas-dylib/: COPYRIGHT  Cargo.toml  README.md
crates/kas-dylib/src/: lib.rs
crates/kas-image/: Cargo.toml  README.md
crates/kas-image/src/: canvas.rs  image.rs  lib.rs  raw_image.rs  sprite.rs  svg.rs
crates/kas-macros/: Cargo.toml  README.md  build.rs
crates/kas-macros/src/: args.rs  autoimpl.rs  autoimpl_traits.rs  class_traits.rs  collection.rs  extends.rs  generics.rs  impl_singleton.rs  layout.rs  lib.rs  make_layout.rs  make_widget.rs  parser.rs  scroll_traits.rs  storage.rs  visitors.rs  where_clause.rs  widget.rs  widget_args.rs  widget_derive.rs  widget_index.rs
crates/kas-macros/tests/: autoimpl.rs
crates/kas-resvg/: Cargo.toml  README.md
crates/kas-resvg/src/: canvas.rs  lib.rs  svg.rs
crates/kas-soft/: Cargo.toml  README.md
crates/kas-soft/src/: atlas.rs  basic.rs  draw.rs  lib.rs
crates/kas-theme/: Cargo.toml  README.md
crates/kas-theme/src/: anim.rs  colors.rs  config.rs  dim.rs  flat_theme.rs  lib.rs  multi.rs  shaded_theme.rs  simple_theme.rs  theme_dst.rs  traits.rs
crates/kas-view/: Cargo.toml  README.md
crates/kas-view/src/: clerk.rs  data_clerk.rs  data_impls.rs  data_traits.rs  driver.rs  filter.rs  generator.rs  grid_view.rs  lib.rs  list_view.rs  matrix_view.rs  single_view.rs
crates/kas-wgpu/: Cargo.toml  README.md  build.rs
crates/kas-wgpu/examples/: cursors.rs  data-list-view.rs  filter-list.rs  gallery.rs  mandlebrot.rs  markdown.rs  splitter.rs
crates/kas-wgpu/src/: draw_shaded.rs  event_loop.rs  lib.rs  options.rs  shaded_theme.rs  shared.rs  shell.rs  surface.rs  window.rs
crates/kas-widgets/: COPYRIGHT  Cargo.toml  README.md
crates/kas-widgets/src/: access_label.rs  adapt.rs  button.rs  canvas.rs  check_box.rs  checkbox.rs  combobox.rs  dialog.rs  drag.rs  edit.rs  edit_field.rs  editbox.rs  event_config.rs  filler.rs  float.rs  flow.rs  frame.rs  grid.rs  grip.rs  image.rs  label.rs  lib.rs  list.rs  macros.rs  mark.rs  menu.rs  nav_frame.rs  progress.rs  radio_box.rs  radiobox.rs  scroll.rs  scroll_bar.rs  scroll_label.rs  scroll_text.rs  scrollbar.rs  separator.rs  slider.rs  spin_box.rs  spinner.rs  splitter.rs  (+6 more)
examples/file-explorer/: Cargo.toml  README.md
examples/file-explorer/src/: main.rs  tile.rs
examples/mandlebrot/: Cargo.toml  README.md  build.rs  mandlebrot.rs  shader.vert.wgsl  shader.wgsl  shader32.frag  shader32.frag.spv  shader32.frag.wgsl  shader32.wgsl  shader64.frag  shader64.frag.spv  shader64.frag.wgsl  shader64.wgsl
examples/text-editor/: Cargo.toml  README.md  text-editor.rs
kas-gtk/: Cargo.toml  README.md
kas-gtk/examples/: calculator.rs  clock.rs  counter.rs  counter_expanded.rs  gallery.rs  hello.rs  stopwatch.rs
kas-gtk/src/: event.rs  lib.rs  tkd.rs  widget.rs  window.rs
kas-macros/: Cargo.toml  README.md
kas-macros/src/: args.rs  layout.rs  layout_cw.rs  layout_extern.rs  lib.rs
kas-rgx/: Cargo.toml  README.md
kas-rgx/examples/: calculator.rs  clock.rs  clock_expanded.rs  counter.rs  counter_expanded.rs  gallery.rs  hello.rs  layout.rs  stopwatch.rs
kas-rgx/src/: event.rs  font.rs  lib.rs  render.rs  tkd.rs  widget.rs  window.rs
kas-theme/: Cargo.toml  README.md
kas-theme/src/: col.rs  colors.rs  config.rs  dim.rs  draw_shaded.rs  flat_theme.rs  font.rs  lib.rs  multi.rs  shaded_theme.rs  theme_dst.rs  traits.rs
kas-wgpu/: Cargo.toml  README.md  build.rs
kas-wgpu/examples/: README.md  async-event.rs  calculator.rs  canvas.rs  clock.rs  clock_expanded.rs  counter.rs  cursors.rs  custom-theme.rs  data-list-view.rs  data-list.rs  dynamic-view.rs  dynamic.rs  filter-list.rs  gallery.rs  hello.rs  layout.rs  mandlebrot.rs  markdown.rs  splitter.rs  stopwatch.rs  sync-counter.rs  theme.rs
kas-wgpu/examples/mandlebrot/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
kas-wgpu/src/: colour.rs  event.rs  event_loop.rs  font.rs  lib.rs  options.rs  render.rs  round_pipe.rs  shared.rs  theme.rs  tri_pipe.rs  vertex.rs  window.rs
kas-wgpu/src/draw/: atlases.rs  common.rs  custom.rs  draw_pipe.rs  draw_text.rs  flat_round.rs  images.rs  mod.rs  round_pipe.rs  shaded_round.rs  shaded_square.rs  shaders.rs  square_pipe.rs  text_pipe.rs  vector.rs
kas-wgpu/src/resources/: colours.rs  mod.rs
kas-wgpu/src/shaders/: rounded.frag  tri_buffer.frag  tri_buffer.vert
kas-wgpu/src/theme/: dimensions.rs  flat_theme.rs  mod.rs  multi_theme.rs  sample_theme.rs  shaded_theme.rs  size_handle.rs
mygui-gtk/: Cargo.toml
mygui-gtk/examples/: calculator.rs  clock.rs  counter.rs  counter_expanded.rs  hello.rs  stopwatch.rs
mygui-gtk/src/: event.rs  lib.rs  tkd.rs  widget.rs  window.rs
mygui-macros/: Cargo.toml
mygui-macros/src/: args.rs  layout_cw.rs  layout_extern.rs  lib.rs
(+407 files in other folders)
