[package]
name = "kas-gtk"
version = "0.0.1"
authors = ["Diggory Hardy <git@dhardy.name>"]
edition = "2018"
license = "Apache-2.0"
description = "GTK adaptor to KAS, the GUI Toolkit Abstraction System"
keywords = ["gui", "gtk"]
categories = ["gui"]
repository = "https://gitlab.com/dhardy/kas"

[features]
# Use kas's layout positioning instead of GTK's.
# This is just a tech demo, and not currently recommended.
layout = ["kas/layout"]

[dependencies]
kas = { path = "..", version = "0.0.1" }
gtk = "0.5"
gdk = { version = "0.9", features = ["v3_10"] }
glib = "0.6"
gtk-sys = "0.7"

[dev-dependencies]
chrono = "0.4"
