[package]
name = "kas-gtk"
version = "0.0.2"
authors = ["Diggory Hardy <git@dhardy.name>"]
edition = "2018"
license = "Apache-2.0"
description = "GTK adaptor to KAS, the GUI Toolkit Abstraction System"
keywords = ["gui", "gtk"]
categories = ["gui"]
repository = "https://gitlab.com/dhardy/kas"

[features]
# Use kas's layout positioning instead of GTK's.
# This is just a tech demo, and not currently recommended.
layout = ["kas/layout"]

[dependencies]
kas = { path = "..", version = "0.0.2" }
gtk = { version = "0.7", features = [] }
gdk = { version = "0.11", features = [] }
glib = "0.8"
gtk-sys = "0.9"

[dev-dependencies]
chrono = "0.4"
