[package]
name = "kas-macros"
version = "0.0.2"
authors = ["Diggory Hardy <git@dhardy.name>"]
edition = "2018"
license = "Apache-2.0"
description = "GUI Toolkit Abstraction System (macros)"
keywords = ["gui", "proc-macro"]
categories = ["gui"]
repository = "https://gitlab.com/dhardy/kas"

[lib]
proc-macro = true

[features]
cassowary = []

[dependencies]
quote = "0.6"
proc-macro2 = { version = "0.4", features = ["nightly"] }

[dependencies.syn]
version = "0.15"
# We need 'extra-traits' for equality testing
# We need 'full' for parsing macros within macro arguments
features = ["extra-traits", "full"]
