[package]
name = "kas-macros"
version = "0.1.0-pre.1"
authors = ["Diggory Hardy <git@dhardy.name>"]
edition = "2018"
license = "Apache-2.0"
description = "GUI Toolkit Abstraction System (macros)"
keywords = ["gui", "proc-macro"]
categories = ["gui"]
repository = "https://github.com/dhardy/kas"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["nightly"] }

[dependencies.syn]
version = "1.0"
# We need 'extra-traits' for equality testing
# We need 'full' for parsing macros within macro arguments
features = ["extra-traits", "full"]
