[package]
name = "kas-rgx"
version = "0.0.2"
authors = ["Diggory Hardy <git@dhardy.name>"]
edition = "2018"
license = "Apache-2.0"
description = "Native KAS toolkit using rgx renderer"
keywords = ["gui"]
categories = ["gui"]
repository = "https://gitlab.com/dhardy/kas"

[features]
[dependencies]
kas = { path = "..", version = "0.0.2", features = ["layout"] }
rgx = { version = "0.1.5", features = [] }
winit = "0.20.0-alpha3"
raw-window-handle = "0.1"

[dev-dependencies]
chrono = "0.4"
