[package]
name = "kas-rgx"
version = "0.0.2"
authors = ["Diggory Hardy <git@dhardy.name>"]
edition = "2018"
license = "Apache-2.0"
description = "Native KAS toolkit using rgx renderer"
keywords = ["gui"]
categories = ["gui"]
repository = "https://gitlab.com/dhardy/kas"

[features]
[dependencies]
kas = { path = "..", version = "0.0.2" }
# TODO: expose backend features
rgx = { git = "https://github.com/dhardy/rgx.git", version = "0.1.5", features = ["vulkan"] }
winit = "0.20.0-alpha3"
raw-window-handle = "0.1"
wgpu = "0.3.0"
wgpu_glyph = "0.4.0"
font-kit = { version = "0.4.0", optional = true }
lazy_static = "1.4.0"

[dev-dependencies]
chrono = "0.4"
