[package]
name = "kas-theme"
version = "0.3.0"
authors = ["Diggory Hardy <git@dhardy.name>"]
edition = "2018"
license = "Apache-2.0"
description = "KAS toolkit — theme support"
keywords = ["gui"]
categories = ["gui"]
repository = "https://github.com/dhardy/kas"

[features]
default = ["font-kit", "stack_dst"]

# Use Generic Associated Types (experimental)
# Currently (Feb 2020) compiler support is poor.
gat = []

# Use stack_dst crate for sized unsized types
stack_dst = ["kas/stack_dst", "stack_dst_"]

[dependencies]
font-kit = { version = "0.4.0", optional = true }
lazy_static = "1.4.0"
log = "0.4"
stack_dst_ = { version = "0.6", package = "stack_dst", features = ["unsize"], optional = true }

[dependencies.kas]
path = ".."
version = "0.3.0"

[package.metadata.docs.rs]
features = ["stack_dst"]
