[package]
name = "kas-wgpu"
version = "0.5.0"
authors = ["Diggory Hardy <git@dhardy.name>"]
edition = "2018"
license = "Apache-2.0"
description = "KAS GUI / wgpu front-end"
keywords = ["gui", "wgpu"]
categories = ["gui"]
repository = "https://github.com/kas-gui/kas"
readme = "README.md"
documentation = "https://docs.rs/kas-wgpu/"

[features]
default = ["clipboard", "stack_dst"]

# Use Generic Associated Types (experimental)
gat = ["kas-theme/gat"]

# Enables text shaping
shaping = ["kas/shaping"]

# Use stack_dst crate for sized unsized types
stack_dst = ["kas-theme/stack_dst"]

# Use kas-theme's unsize feature (nightly-only)
unsize = ["kas-theme/unsize"]

[dependencies]
kas = { path = "..", version = "0.5.0", features = ["winit"] }
kas-theme = { path = "../kas-theme", version = "0.5.0" }
bytemuck = "1.2"
futures = "0.3"
log = "0.4"
smallvec = "1.1"
wgpu = "0.6.0"
wgpu_glyph = "0.10.0"
winit = "0.22.0"

[dependencies.clipboard]
# Provides clipboard support
version = "0.5"
optional = true

[dev-dependencies]
chrono = "0.4"
env_logger = "0.7"

[package.metadata.docs.rs]
# NOTE: clipboard feature is causing build failures
# https://github.com/kas-gui/kas/issues/83
no-default-features = true
features = ["stack_dst"]
