[package]
name = "kas-wgpu"
version = "0.7.0"
authors = ["Diggory Hardy <git@dhardy.name>"]
edition = "2018"
license = "Apache-2.0"
description = "KAS GUI / wgpu front-end"
keywords = ["gui", "wgpu"]
categories = ["gui"]
repository = "https://github.com/kas-gui/kas"
readme = "README.md"
documentation = "https://docs.rs/kas-wgpu/"

[package.metadata.docs.rs]
# NOTE: clipboard feature is causing build failures
# https://github.com/kas-gui/kas/issues/83
no-default-features = true
features = ["stack_dst"]

[features]
default = ["clipboard", "stack_dst"]
nightly = ["unsize", "kas/nightly", "kas-theme/nightly"]

# Use Generic Associated Types (this is too unstable to include in nightly!)
gat = ["kas-theme/gat"]

# Enables clipboard read/write
clipboard = ["window_clipboard"]

# Enables text shaping
shaping = ["kas/shaping"]

# Use stack_dst crate for sized unsized types
stack_dst = ["kas-theme/stack_dst"]

# Use kas-theme's unsize feature (nightly-only)
unsize = ["kas-theme/unsize"]

[dependencies]
kas = { path = "..", version = "0.7.0", features = ["winit"] }
kas-theme = { path = "../kas-theme", version = "0.7.0" }
bytemuck = "1.5.1"
futures = "0.3"
log = "0.4"
smallvec = "1.6.1"
wgpu = "0.7.0"
wgpu_glyph = "0.11.0"
winit = "0.24"
thiserror = "1.0.23"
window_clipboard = { version = "0.2.0", optional = true }
image = "0.23.14"

[dev-dependencies]
chrono = "0.4"
env_logger = "0.8"
kas = { path = "..", features = ["markdown", "winit", "json", "yaml"] }

[build-dependencies]
glob = "0.3"
