[package]
name = "kas-wgpu"
version = "0.8.1"
authors = ["Diggory Hardy <git@dhardy.name>"]
edition = "2018"
license = "Apache-2.0"
description = "KAS GUI / wgpu front-end"
keywords = ["gui", "wgpu"]
categories = ["gui"]
repository = "https://github.com/kas-gui/kas"
readme = "README.md"
documentation = "https://docs.rs/kas-wgpu/"

[package.metadata.docs.rs]
# NOTE: clipboard feature is causing build failures
# https://github.com/kas-gui/kas/issues/83
no-default-features = true
features = ["stack_dst", "raster"]

[features]
# WARNING: if "raster" is disabled, an alternative like "kas-text/fontdue" is required!
default = ["clipboard", "stack_dst", "shaping", "raster"]
nightly = ["unsize", "kas/nightly", "kas-theme/nightly"]

shaping = ["kas-text/shaping"]
raster = ["kas-text/raster"]

# Use Generic Associated Types (this is too unstable to include in nightly!)
gat = ["kas-theme/gat"]

# Enables clipboard read/write
clipboard = ["window_clipboard"]

# Use stack_dst crate for sized unsized types
stack_dst = ["kas-theme/stack_dst"]

# Use kas-theme's unsize feature (nightly-only)
unsize = ["kas-theme/unsize"]

[dependencies]
kas = { path = "..", version = "0.8.0", features = ["config", "winit"] }
kas-theme = { path = "../kas-theme", features = ["config"], version = "0.8.0" }
kas-text = { version = "0.3.0" }
bytemuck = "1.7.0"
futures = "0.3"
log = "0.4"
smallvec = "1.6.1"
wgpu = "0.9.0"
winit = "0.25"
thiserror = "1.0.23"
window_clipboard = { version = "0.2.0", optional = true }
guillotiere = "0.6.0"
rustc-hash = "1.0"

[dev-dependencies]
chrono = "0.4"
env_logger = "0.8"
kas = { path = "..", features = ["markdown", "winit", "json", "yaml", "ron", "svg"] }

[build-dependencies]
glob = "0.3"
