[package]
name = "mygui-gtk"
version = "0.1.0"
authors = ["Diggory Hardy <git@dhardy.name>"]
edition = "2018"

[features]
# Use mygui's layout positioning instead of GTK's.
# This is just a tech demo, and not currently recommended.
layout = ["mygui/layout"]

[dependencies]
mygui = { path = ".." }
gtk = "0.5"
gdk = { version = "0.9", features = ["v3_10"] }
glib = "0.6"
gtk-sys = "0.7"

[dev-dependencies]
chrono = "0.4"
