[package]
name = "mygui-macros"
version = "0.1.0"
authors = ["Diggory Hardy <git@dhardy.name>"]
edition = "2018"

[lib]
proc-macro = true

[features]
cassowary = []

[dependencies]
syn = { version = "0.15", features = ["extra-traits"] }
quote = "0.6"
proc-macro2 = { version = "0.4", features = ["nightly"] }
