[package]
name = "mygui-macros"
version = "0.1.0"
authors = ["Diggory Hardy <git@dhardy.name>"]
edition = "2018"

[lib]
proc-macro = true

[features]
cassowary = []

[dependencies]
quote = "0.6"
proc-macro2 = { version = "0.4", features = ["nightly"] }

[dependencies.syn]
version = "0.15"
# We need 'extra-traits' for equality testing
# We need 'full' for parsing macros within macro arguments
features = ["extra-traits", "full"]
