[package]
name = "kas-core"
version = "0.13.0"
authors = ["Diggory Hardy <git@dhardy.name>"]
edition = "2021"
license = "Apache-2.0"
description = "KAS GUI / core"
readme = "README.md"
documentation = "https://docs.rs/kas-core/"
keywords = ["gui"]
categories = ["gui"]
repository = "https://github.com/kas-gui/kas"
exclude = ["/screenshots"]

[package.metadata.docs.rs]
features = ["winit", "markdown", "yaml", "json", "ron"]
rustdoc-args = ["--cfg", "doc_cfg"]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --features=internal_doc,winit,markdown,yaml,json,ron --no-deps --open

[features]
# Use full specialization
spec = []

# Enables documentation of APIs for shells and internal usage.
# This API is not intended for use by end-user applications and
# thus is omitted from built documentation by default.
# This flag does not change the API, only built documentation.
internal_doc = []

# Enable Markdown parsing
markdown = ["kas-text/markdown"]

# Enable text shaping
shaping = ["kas-text/shaping"]
# Alternative: use Harfbuzz library for shaping
harfbuzz = ["kas-text/harfbuzz"]

# Enable support for YAML (de)serialisation
yaml = ["serde", "dep:serde_yaml"]

# Enable support for JSON (de)serialisation
json = ["serde", "dep:serde_json"]

# Enable support for RON (de)serialisation
ron = ["serde", "dep:ron"]

# Enables clipboard read/write
clipboard = ["dep:copypasta"]

# Inject logging into macro-generated code.
# Requires that all crates using these macros depend on the log crate.
macros_log = ["kas-macros/log"]

# Enable winit support
winit = ["dep:winit"]

# Support Wayland
wayland = ["winit?/wayland", "winit?/wayland-dlopen"]

# Support X11
x11 = ["winit?/x11"]

# Enable serde integration (mainly config read/write)
serde = ["dep:serde", "kas-text/serde", "winit?/serde"]

# Automatically detect usage of dark theme
dark-light = ["dep:dark-light"]

# Support spawning async tasks
spawn = ["dep:async-global-executor"]

[dependencies]
log = "0.4"
smallvec = "1.6.1"
bitflags = "1.3.1"
unicode-segmentation = "1.7"
linear-map = "1.2.0"
thiserror = "1.0.23"
serde = { version = "1.0.123", features = ["derive"], optional = true }
serde_json = { version = "1.0.61", optional = true }
serde_yaml = { version = "0.9.9", optional = true }
ron = { version = "0.8.0", package = "ron", optional = true }
num_enum = "0.5.6"
dark-light = { version = "1.0", optional = true }
raw-window-handle = "0.5.0"
async-global-executor = { version = "2.3.1", optional = true }
cfg-if = "1.0.0"
copypasta = { version = "0.8.2", optional = true }

[dependencies.kas-macros]
version = "0.13.0"
path = "../kas-macros"

[dependencies.kas-text]
version = "0.6.0"

[dependencies.easy-cast]
version = "0.5.0" # used in doc links

[dependencies.winit]
# Provides translations for several winit types
version = "0.28.1"
optional = true
default-features = false
