[package]
name = "kas-dylib"
version = "0.15.0"
authors = ["Diggory Hardy <git@dhardy.name>"]
edition = "2021"
license = "Apache-2.0"
description = "KAS GUI / dylib"
readme = "README.md"
documentation = "https://docs.rs/kas-dylib/"
keywords = ["gui"]
categories = ["gui"]
repository = "https://github.com/kas-gui/kas"

[package.metadata.docs.rs]
features = ["docs_rs"]

[lib]
crate-type = ["dylib"]

[features]
resvg = ["dep:kas-resvg"]

# Non-local features required for doc builds.
# Note: docs.rs does not support direct usage of transitive features.
docs_rs = ["kas-core/winit", "kas-core/wayland"]

[dependencies]
kas-core = { version = "0.15.0", path = "../kas-core" }
kas-widgets = { version = "0.15.0", path = "../kas-widgets" }
kas-resvg = { version = "0.15.0", path = "../kas-resvg", optional = true }
kas-wgpu = { version = "0.15.0", path = "../kas-wgpu", default-features = false }
