[package]
name = "kas-dylib"
version = "0.15.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "KAS GUI / dylib"
readme = "README.md"
documentation = "https://docs.rs/kas-dylib/"
keywords = ["gui"]
categories = ["gui"]
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
features = ["docs_rs"]

[lib]
crate-type = ["dylib"]

[features]
resvg = ["dep:kas-resvg"]

# Non-local features required for doc builds.
# Note: docs.rs does not support direct usage of transitive features.
docs_rs = ["kas-core/winit", "kas-core/wayland"]

[dependencies]
kas-core = { version = "0.15.0", path = "../kas-core" }
kas-widgets = { version = "0.15.0", path = "../kas-widgets" }
kas-resvg = { version = "0.15.0", path = "../kas-resvg", optional = true }
kas-wgpu = { version = "0.15.0", path = "../kas-wgpu", default-features = false }
